--- a/public/style/global.css
+++ b/public/style/global.css
@@ -1,9 +1,10 @@
+
+
+/* MAIN.EJS */
+
 body {
     background-color: rgb(230, 230, 230);
- 
 }
-
-
 .drop-down-container {
     background-color: rgb(255, 255, 255);
     display: flex;
@@ -11,9 +12,6 @@ body {
 .drop-down-container > * {
     flex-basis: 99%;
 }
-
-
-
 .title-container{
     display: flex;
     align-items: center;
@@ -25,11 +23,11 @@ body {
 
 
 
+/* HOME.EJS */
 
 .image-container {
     position: relative;
 }
-
 /* center text */
 .centered { 
     background: rgba(206, 178, 153, 0.4); 
@@ -37,7 +35,6 @@ body {
     width: 300px;
     top: 40%;
     left: 40%;
-    
 }
 /* Bottom left text */
 .bottom-left {
@@ -45,28 +42,27 @@ body {
     bottom: 80px;
     left: 80px;
   }
-
-
 .retail-title-container {
     background-color: rgb(255, 255, 255);
     padding-top: 70px;
     text-align: center;
     height: 150px;
-
 }
-
+/* Retail */
+/* Parent flex container */
 .retail-container {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(243, 241, 241);
     height: 900px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    
 
 }
+/* Child flex items */
+.retail-item {
+    width: 100%;
+    height: 100%;
+    padding-left: 20%;
+   
 
-
-
-.product-container {
+    
 
 }
