--- a/public/style/global.css
+++ b/public/style/global.css
@@ -46,7 +46,7 @@ body {
     text-align: center;
     height: 150px;
 }
-/* Retail */
+
 /* Parent flex container */
 .retail-container {
     background-color: rgb(243, 241, 241);
@@ -59,15 +59,19 @@ body {
     width: 100%;
     height: 100%;
     padding-left: 20%;
+    margin-top: 30px;
 }
 
 
 
 
-/* PRINT.EJS */
+
+/* PRINTS.EJS */
+
 .retail {
     display: flex;
     width: 80%;
+    margin-top: 5%;
     
 }
 .print-img {
@@ -75,4 +79,52 @@ body {
 }
 .print-info {
     padding-left: 30px;
+}
+
+/* /* SIGNUP.EJS AND LOGIN.EJS */
+
+.signup-form {
+    display: flex;
+    justify-content: center;
+    margin-top: 6%;
+    width: 80%;
+    
+}
+.signup {
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    border-radius: 30px;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    width: 400px;
+    
+}
+#fname {
+    margin-bottom: 20px;
+}
+#lname {
+    margin-bottom: 20px;
+}
+#password {
+    margin-bottom: 20px;
+}
+#submit-btn {
+    background-color: rgb(255, 255, 255);
+
+    border: none;
+}
+
+.alert{
+    background-color: rosybrown;
+    opacity: 80%;
+}
+
+/* CART.EJS */
+.cart-container {
+    background-color: white;
+    display: flex;
+    padding: 6%;
+    margin: 50px;
+    width: 60%;
+    border-radius: 25px;
 }
