--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -6,12 +6,12 @@
 
 
     <link href="/style/app.css" rel="stylesheet" type="text/css">
-    <title>STUDIO</title>
+    <title> STUDIO</title>
 
     <div class="drop-down-container">
         <div class="title-container">
             <a href="/new-arrival"><button class="drop-down-btn">New Arrivals</button></a>
-            <a href="/signup"><button class="drop-down-btn">Collections</button></a>
+            <a href="/collections"><button class="drop-down-btn">Collections</button></a>
         </div>
 
         <div class="title-container">
@@ -21,7 +21,7 @@
         <div class="title-container">
             <a href="/login"><button class="drop-down-btn">Login</button></a>
             <a href="/signup"><button class="drop-down-btn">Signup</button></a>
-            <a href="/signup"><button class="drop-down-btn">Cart</button></a>
+            <a href="/cart"><button class="drop-down-btn">Cart</button></a>
         </div>
     </div>
 
